# ai-support

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  MANIFEST.in  README.md
ci/: README.md  docker.ci.md  dockerfile.riscv64  dockerfile.x86_64  pack.sh  test.sh
data/config/: nanodet.json  yolov4.json  yolov6.json
debian/: README  README.Debian  bianbu.conf  changelog  control  copyright  postinst  postrm  preinst  prerm  rules
demo/: README.md  build.sh  dataloader.hpp  image_classification_demo.cc  object_detection.hpp  object_detection_demo.cc  object_detection_stream_demo.cc  object_detection_video_demo.cc  pose_estimation.hpp  pose_estimation_demo.cc  pose_tracker_stream_demo.cc
demo/utils/: check_utils.h  cv_helper.hpp
include/task/vision/: image_classification_task.h  image_classification_types.h  object_detection_task.h  object_detection_types.h  pose_estimation_task.h  pose_estimation_types.h
include/utils/: utils.h
python/: README.md  setup.py
rootfs/etc/xdg/autostart/: object-detection.desktop  pose-tracker.desktop
rootfs/usr/share/applications/: object-detection.desktop  pose-tracker.desktop
src/: CMakeLists.txt
src/core/: engine.cc  engine.h  ort_wrapper.cc  ort_wrapper.h
src/processor/: classification_postprocessor.cc  classification_postprocessor.h  classification_preprocessor.cc  classification_preprocessor.h  detection_postprocessor.cc  detection_postprocessor.h  detection_preprocessor.cc  detection_preprocessor.h  estimation_postprocessor.cc  estimation_postprocessor.h  estimation_preprocessor.cc  estimation_preprocessor.h
src/task/vision/: base_vision_task_api.h
src/task/vision/imageclassification/: image_classification.cc  image_classification.h  image_classification_task.cc
src/task/vision/objectdetection/: object_detection.cc  object_detection.h  object_detection_task.cc
src/tests/: json_test.cc
src/utils/: cv2_utils.cc  nms_utils.cc  utils.cc  utils.h
tests/: CMakeLists.txt  json_test.cc
(+8 files in other folders)
